--- a/shabuPage/src/pages/dashBoard/DashPage.css
+++ b/shabuPage/src/pages/dashBoard/DashPage.css
@@ -154,8 +154,9 @@
 }
 
 .legend {
+    white-space: nowrap;
     list-style: none;
-    padding: 0;
+    padding: 0px;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -171,6 +172,18 @@
     border-radius: 4px;
     display: inline-block;
     margin-right: 10px;
+}
+
+.dot.red {
+    background: #ef4444
+}
+
+.dot.yellow {
+    background: #daf34d
+}
+
+.dot.blue {
+    background: #00b5fc
 }
 
 .weekly-row {
