--- a/shabuPage/src/pages/dashBoard/DashPage.css
+++ b/shabuPage/src/pages/dashBoard/DashPage.css
@@ -40,37 +40,41 @@
 }
 
 .items-grid {
-    display: flex;
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+
     gap: 20px;
-    align-items: flex-start;
+    align-items: start;
     margin-bottom: 20px;
-    flex-wrap: wrap;
 }
 
 .item-col {
+    display: flex;
+    flex-direction: column;
+
     min-width: 125px;
     background: linear-gradient(180deg, rgba(240, 246, 252, 0.6), rgba(255, 255, 255, 0.5));
+
     border-radius: 13px;
     padding: 13px;
     text-align: center;
 }
 
+.item-col:hover {
+    transform: scale(1.1);
+}
+
 .item-name {
     font-size: 18px;
-    color: #374151;
+    font-weight: 700;
+    color: #080808;
     margin-bottom: 8px;
 }
 
 .item-count {
-    font-size: 25px;
-    font-weight: 700;
-    color: #0f1724;
-}
-
-.item-price {
-    font-size: 16px;
-    color: var(--muted);
-    margin-top: 8px;
+    font-size: 15px;
+    font-weight: 490;
+    color: #595d63;
 }
 
 .total {
@@ -134,7 +138,7 @@
 }
 
 .donut-segment.s1 {
-    stroke: #ef4444
+    stroke: #00b5fc
 }
 
 .donut-segment.s2 {
@@ -142,7 +146,7 @@
 }
 
 .donut-segment.s3 {
-    stroke: #00b5fc
+    stroke: #ef4444
 }
 
 
