--- a/shabuPage/src/pages/management/ManagementPage.css
+++ b/shabuPage/src/pages/management/ManagementPage.css
@@ -8,12 +8,12 @@
 }
 
 .item-card {
-    background-color: rgb(159, 64, 64);
     height: 320px;
     width: 250px;
     border: none;
     border-radius: 15px;
     overflow: hidden;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
     box-sizing: border-box;
     display: flex;
@@ -35,4 +35,99 @@
     height: 100%;
     object-fit: cover;
     display: block;
+}
+
+.items-details-container {
+    display: flex;
+    flex-direction: column;
+    justify-items: start;
+    align-items: start;
+
+    padding-left: 20px;
+    padding-top: 10px;
+}
+
+.item-price-edit-container {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    column-gap: 10px;
+}
+
+.item-update-price-container {
+    margin-top: auto;
+    width: 100%;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: end;
+}
+
+button {
+    border-radius: 4px;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    cursor: pointer;
+}
+
+.edit-button {
+    display: inline-block;
+    background-color: #22a832;
+    font-size: 17px;
+    padding: 5px 10px;
+    transition: all 0.5s;
+}
+
+.edit-button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+}
+
+
+.edit-button span:after {
+    content: '»';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -15px;
+    transition: 0.5s;
+}
+
+
+.edit-button:hover span {
+    padding-right: 15px;
+}
+
+
+.edit-button:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
+.update-price-form {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+}
+
+.update-price-form-buttons {
+    display: flex;
+    flex-direction: row;
+    column-gap: 10px;
+}
+
+.update-price-input {
+    padding: 5px;
+}
+
+.confirm-button {
+    background-color: #28bb2d;
+}
+
+.cancel-button {
+    background-color: #af4c4c;
 }
